outlet wise product sho fixed
